--- a/pages/18853.html
+++ b/pages/18853.html
@@ -895,6 +895,234 @@ margin-left: 0em;
   <a href='/nlab/edit/physicscontents'>Edit this sidebar</a>
 </p>
 </div></div>
+
+<h4 id='algebraic_quantum_field_theory'>Algebraic Quantum Field Theory</h4>
+
+<div class='hide'>
+<p><strong><a class='existingWikiWord' href='/nlab/show/AQFT'>algebraic quantum field theory</a></strong> (<a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>perturbative</a>, <a class='existingWikiWord' href='/nlab/show/AQFT+on+curved+spacetimes'>on curved spacetimes</a>, <a class='existingWikiWord' href='/nlab/show/homotopical+algebraic+quantum+field+theory'>homotopical</a>)</p>
+
+<h2 id='concepts'>Concepts</h2>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/field+theory'>field theory</a></strong>: <a class='existingWikiWord' href='/nlab/show/classical+field+theory'>classical</a>, <a class='existingWikiWord' href='/nlab/show/prequantum+field+theory'>pre-quantum</a>, <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum</a>, <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum</a></p>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theory</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/field+bundle'>field bundle</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian density</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+form'>Euler-Lagrange form</a>, <a class='existingWikiWord' href='/nlab/show/pre-symplectic+current'>presymplectic current</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/locally+variational+field+theory'>locally variational field theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/phase+space'>covariant phase space</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanical system</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/subsystem'>subsystem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/quantum+observable'>quantum observable</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/operator+algebra'>operator algebra</a>, <a class='existingWikiWord' href='/nlab/show/C-star-algebra'>C*-algebra</a>, <a class='existingWikiWord' href='/nlab/show/von+Neumann+algebra'>von Neumann algebra</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/causally+local+net+of+observables'>local net of observables</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/causal+locality'>causal locality</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Haag-Kastler+axioms'>Haag-Kastler axioms</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Wightman+axioms'>Wightman axioms</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/field+net'>field net</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/conformal+net'>conformal net</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>quantum states</a>,</p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/cyclic+vector'>cyclic vector</a>, <a class='existingWikiWord' href='/nlab/show/separating+vector'>separating vector</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/quasi-free+quantum+state'>quasi-free state</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/vacuum+state'>vacuum state</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Hadamard+distribution'>Hadamard state</a></p>
+</li>
+</ul>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/quantization'>quantization</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/phase+space'>covariant phase space</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Peierls+bracket'>Peierls-Poisson bracket</a>, <a class='existingWikiWord' href='/nlab/show/causal+propagator'>causal propagator</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a>, <a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>perturbative AQFT</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Wick+algebra'>Wick algebra</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/microcausal+functional'>microcausal functionals</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Wick+algebra'>normal ordered product</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a>, <a class='existingWikiWord' href='/nlab/show/scattering+amplitude'>scattering amplitude</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/causal+additivity'>causal additivity</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Dyson+formula'>time-ordered product</a>, <a class='existingWikiWord' href='/nlab/show/Feynman+propagator'>Feynman propagator</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagram</a>, <a class='existingWikiWord' href='/nlab/show/S-matrix'>Feynman perturbation series</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/interacting+field+algebra'>interacting field algebra</a></p>
+</li>
+</ul>
+
+<h2 id='theorems'>Theorems</h2>
+
+<h3 id='states_and_observables'>States and observables</h3>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Kochen-Specker+theorem'>Kochen-Specker theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Gleason%27s+theorem'>Gleason&#39;s theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Wigner+theorem'>Wigner theorem</a></p>
+</li>
+</ul>
+
+<h3 id='operator_algebra'>Operator algebra</h3>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Gelfand-Naimark-Segal+construction'>GNS construction</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/modular+theory'>modular theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Fell%27s+theorem'>Fell&#39;s theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Stone-von+Neumann+theorem'>Stone-von Neumann theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Haag%27s+theorem'>Haag&#39;s theorem</a></p>
+</li>
+</ul>
+
+<h3 id='local_qft'>Local QFT</h3>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Reeh-Schlieder+theorem'>Reeh-Schlieder theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Bisognano-Wichmann+theorem'>Bisognano-Wichmann theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/PCT+theorem'>PCT theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/spin-statistics+theorem'>spin-statistics theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/DHR+superselection+theory'>DHR superselection theory</a></p>
+</li>
+</ul>
+
+<h3 id='perturbative_qft'>Perturbative QFT</h3>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/main+theorem+of+perturbative+renormalization'>main theorem of perturbative renormalization</a></li>
+</ul>
+
+<h3 id='euclidean_qft'>Euclidean QFT</h3>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Osterwalder-Schrader+theorem'>Osterwalder-Schrader theorem</a> (<a class='existingWikiWord' href='/nlab/show/Wick+rotation'>Wick rotation</a>)</li>
+</ul>
+</div>
 </div>
 </div>
 
@@ -904,17 +1132,21 @@ margin-left: 0em;
 
 <p>The <em>Lamb shift</em> is a tiny shift in the <a class='existingWikiWord' href='/nlab/show/energy'>energy</a> spectrum of excitations of the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> orbits in the <a class='existingWikiWord' href='/nlab/show/hydrogen+atom'>hydrogen atom</a>.</p>
 
-<p><img src='https://ncatlab.org/nlab/files/LambShift.png' width='400'/></p>
+<p><img src='https://ncatlab.org/nlab/files/LambShift.png' width='500'/></p>
 
-<p>This is a “fine structure” effect not seen by the <a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanics</a> of the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a>, but resulting from higher order corrections only seen by regadring the electron in <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a>, here in <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>quantum electrodynamics</a>.</p>
+<p>This is a “fine structure” effect not seen by the <a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanics</a> of the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a>, but resulting from <a class='existingWikiWord' href='/nlab/show/radiative+correction'>radiative corrections</a> involving <a class='existingWikiWord' href='/nlab/show/photon'>photon</a> emission/abosorption only seen by regarding the electron in <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a>, here in <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>quantum electrodynamics</a>.</p>
 
-<p>The Lamb shift may be attributed to a variety of <a class='existingWikiWord' href='/nlab/show/loop+order'>1-loop</a> <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagrams</a> contributions which add corrections to the basic <a class='existingWikiWord' href='/nlab/show/loop+order'>tree level</a> vertex describing the interaction of the electron with the <a class='existingWikiWord' href='/nlab/show/background+field'>background</a> <a class='existingWikiWord' href='/nlab/show/electromagnetic+field'>electromagnetic field</a>, hence called <em>vertex corrections</em>.</p>
+<p>The Lamb shift may be attributed to <a class='existingWikiWord' href='/nlab/show/loop+order'>1-loop</a> <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagrams</a> contributions giving “<a class='existingWikiWord' href='/nlab/show/radiative+correction'>radiative corrections</a>” to the basic <a class='existingWikiWord' href='/nlab/show/loop+order'>tree level</a> vertex that describes the basic interaction of the electron with the <a class='existingWikiWord' href='/nlab/show/background+field'>background</a> <a class='existingWikiWord' href='/nlab/show/electromagnetic+field'>electromagnetic field</a>, hence called <em>vertex corrections</em>.</p>
 
-<p><a class='existingWikiWord' href='/nlab/files/LambShiftVertexCorrections.png' title=''></a></p>
+<p><img src='https://ncatlab.org/nlab/files/LambShiftVertexCorrections.png' width='500'/></p>
 
-<p><img src='https://ncatlab.org/nlab/files/LambShiftVertexCorrections.png' width='400'/></p>
+<p>(Here the dot on the right is the external vertex for the <a class='existingWikiWord' href='/nlab/show/background+field'>background</a> <a class='existingWikiWord' href='/nlab/show/electromagnetic+field'>electromagnetic field</a>.)</p>
 
-<p>In fact, historically, the observation of the Lamb shift in <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a> catalyzed the theoretic develeopment of <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>quantum electrodynamics</a> specifically and of <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> generally.</p>
+<p>The main contribution (often referred to as <em>the</em> vertex correction) is due to the <a class='existingWikiWord' href='/nlab/show/radiative+correction'>radiative correction</a> induced by the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> emitting a <a class='existingWikiWord' href='/nlab/show/virtual+particle'>virtual</a> <a class='existingWikiWord' href='/nlab/show/photon'>photon</a>, then interacting with the <a class='existingWikiWord' href='/nlab/show/background+field'>background</a> <a class='existingWikiWord' href='/nlab/show/electromagnetic+field'>electromagnetic field</a>, and and re-absorbing the <a class='existingWikiWord' href='/nlab/show/virtual+particle'>virtual</a> <a class='existingWikiWord' href='/nlab/show/photon'>photon</a>; described by this <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagram</a>:</p>
+
+<p><img src='https://ncatlab.org/nlab/files/LambShiftMainVertexCorrection.png' width='100'/></p>
+
+<p>Historically, the observation of the Lamb shift in <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a> catalyzed the theoretic development of <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>quantum electrodynamics</a> specifically and of <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> generally.</p>
 
 <h2 id='references'>References:</h2>
 
@@ -924,7 +1156,25 @@ margin-left: 0em;
 <li><a class='existingWikiWord' href='/nlab/show/Willis+Lamb'>Willis Lamb</a>, Robert C. Retherford, <em>Fine Structure of the Hydrogen Atom by a Microwave Method</em>, Phys. Rev. 72, 241 – Published 1 August 1947 (<a href='https://doi.org/10.1103/PhysRev.72.241'>doi:10.1103/PhysRev.72.241</a>)</li>
 </ul>
 
-<p>Lecture notes include</p>
+<p>Texts discussing the proper derivation in terms of <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagrams</a> include</p>
+
+<ul>
+<li id='EidesGrotchShelyuto00'>
+<p>Michael Eides, Howard Grotch, Valery A. Shelyuto, <em>Theory of Light Hydrogenlike Atoms</em>, Phys. Rept. 342:63-261, 2001 (<a href='https://arxiv.org/abs/hep-ph/0002158'>arXiv:hep-ph/0002158</a>)</p>
+</li>
+
+<li id='Weinberg95'>
+<p><a class='existingWikiWord' href='/nlab/show/Steven+Weinberg'>Steven Weinberg</a>, section 14.3 of <em>The quantum theory of fields - Volume I: Foundations</em>, Cambridge 1995</p>
+</li>
+</ul>
+
+<p>a useful lightning survey is in</p>
+
+<ul>
+<li id='Alipour14'><a class='existingWikiWord' href='/nlab/show/Mojtaba+Alipour'>Mojtaba Alipour</a>, <em>Lamb Shift</em>, 2014 (<a class='existingWikiWord' href='/nlab/files/AlipourLambShift14.pdf' title='pdf'>pdf</a>)</li>
+</ul>
+
+<p>Many lecture notes instead present a heuristic plausibility argument in terms of oscillations of the electron picked up from “vacuum fluctuations” of the background electomagnetic field:</p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Hitoshi+Murayama'>Hitoshi Murayama</a>, section 1.1 of <em>Quantum Electrodynamics</em> (<a href='http://hitoshi.berkeley.edu/221B-S02/QED.pdf'>pdf</a>)</li>
@@ -936,15 +1186,18 @@ margin-left: 0em;
 <li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Lamb_shift'>Lamb shift</a></em></li>
 </ul>
 
-<p><a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a>:</p>
+<p>Discussion of the Lamb shift in <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a> includes</p>
 
 <ul>
 <li><em><a href='http://courses.washington.edu/phys432/lamb_shift/lamb_shift.php'>the Lamb Shift in Hydrogen</a></em></li>
 </ul>
+
+<p>
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on December 20, 2017 14:57:11 
+  Revised on December 20, 2017 15:59:50 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (176.74.57.166)
 </div>
