--- a/pages/18864.html
+++ b/pages/18864.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      virtual particle in nLab
+      radiative correction in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      virtual particle
+      radiative correction
   </h1>
 
 
@@ -311,6 +311,234 @@ margin-left: 0em;
     <div class='rightHandSide'>
 <div class='toc clickDown' tabindex='0'>
 <h3 id='context'>Context</h3>
+
+<h4 id='algebraic_quantum_field_theory'>Algebraic Quantum Field Theory</h4>
+
+<div class='hide'>
+<p><strong><a class='existingWikiWord' href='/nlab/show/AQFT'>algebraic quantum field theory</a></strong> (<a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>perturbative</a>, <a class='existingWikiWord' href='/nlab/show/AQFT+on+curved+spacetimes'>on curved spacetimes</a>, <a class='existingWikiWord' href='/nlab/show/homotopical+algebraic+quantum+field+theory'>homotopical</a>)</p>
+
+<h2 id='concepts'>Concepts</h2>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/field+theory'>field theory</a></strong>: <a class='existingWikiWord' href='/nlab/show/classical+field+theory'>classical</a>, <a class='existingWikiWord' href='/nlab/show/prequantum+field+theory'>pre-quantum</a>, <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum</a>, <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum</a></p>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theory</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/field+bundle'>field bundle</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian density</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+form'>Euler-Lagrange form</a>, <a class='existingWikiWord' href='/nlab/show/pre-symplectic+current'>presymplectic current</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/locally+variational+field+theory'>locally variational field theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/phase+space'>covariant phase space</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanical system</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/subsystem'>subsystem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/quantum+observable'>quantum observable</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/operator+algebra'>operator algebra</a>, <a class='existingWikiWord' href='/nlab/show/C-star-algebra'>C*-algebra</a>, <a class='existingWikiWord' href='/nlab/show/von+Neumann+algebra'>von Neumann algebra</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/causally+local+net+of+observables'>local net of observables</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/causal+locality'>causal locality</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Haag-Kastler+axioms'>Haag-Kastler axioms</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Wightman+axioms'>Wightman axioms</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/field+net'>field net</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/conformal+net'>conformal net</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>quantum states</a>,</p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/cyclic+vector'>cyclic vector</a>, <a class='existingWikiWord' href='/nlab/show/separating+vector'>separating vector</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/quasi-free+quantum+state'>quasi-free state</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/vacuum+state'>vacuum state</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Hadamard+distribution'>Hadamard state</a></p>
+</li>
+</ul>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/quantization'>quantization</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/phase+space'>covariant phase space</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Peierls+bracket'>Peierls-Poisson bracket</a>, <a class='existingWikiWord' href='/nlab/show/causal+propagator'>causal propagator</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a>, <a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>perturbative AQFT</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Wick+algebra'>Wick algebra</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/microcausal+functional'>microcausal functionals</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Wick+algebra'>normal ordered product</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a>, <a class='existingWikiWord' href='/nlab/show/scattering+amplitude'>scattering amplitude</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/causal+additivity'>causal additivity</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Dyson+formula'>time-ordered product</a>, <a class='existingWikiWord' href='/nlab/show/Feynman+propagator'>Feynman propagator</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagram</a>, <a class='existingWikiWord' href='/nlab/show/S-matrix'>Feynman perturbation series</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/interacting+field+algebra'>interacting field algebra</a></p>
+</li>
+</ul>
+
+<h2 id='theorems'>Theorems</h2>
+
+<h3 id='states_and_observables'>States and observables</h3>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Kochen-Specker+theorem'>Kochen-Specker theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Gleason%27s+theorem'>Gleason&#39;s theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Wigner+theorem'>Wigner theorem</a></p>
+</li>
+</ul>
+
+<h3 id='operator_algebra'>Operator algebra</h3>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Gelfand-Naimark-Segal+construction'>GNS construction</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/modular+theory'>modular theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Fell%27s+theorem'>Fell&#39;s theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Stone-von+Neumann+theorem'>Stone-von Neumann theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Haag%27s+theorem'>Haag&#39;s theorem</a></p>
+</li>
+</ul>
+
+<h3 id='local_qft'>Local QFT</h3>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Reeh-Schlieder+theorem'>Reeh-Schlieder theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Bisognano-Wichmann+theorem'>Bisognano-Wichmann theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/PCT+theorem'>PCT theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/spin-statistics+theorem'>spin-statistics theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/DHR+superselection+theory'>DHR superselection theory</a></p>
+</li>
+</ul>
+
+<h3 id='perturbative_qft'>Perturbative QFT</h3>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/main+theorem+of+perturbative+renormalization'>main theorem of perturbative renormalization</a></li>
+</ul>
+
+<h3 id='euclidean_qft'>Euclidean QFT</h3>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Osterwalder-Schrader+theorem'>Osterwalder-Schrader theorem</a> (<a class='existingWikiWord' href='/nlab/show/Wick+rotation'>Wick rotation</a>)</li>
+</ul>
+</div>
 
 <h4 id='physics'>Physics</h4>
 
@@ -895,151 +1123,33 @@ margin-left: 0em;
   <a href='/nlab/edit/physicscontents'>Edit this sidebar</a>
 </p>
 </div></div>
-
-<h4 id='measure_and_probability_theory'>Measure and probability theory</h4>
-
-<div class='hide'>
-<p><strong><a class='existingWikiWord' href='/nlab/show/measure+theory'>measure theory</a></strong></p>
-
-<p><strong><a class='existingWikiWord' href='/nlab/show/probability+theory'>probability theory</a></strong></p>
-
-<h2 id='measure_theory'>Measure theory</h2>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/measurable+space'>measurable space</a>, <a class='existingWikiWord' href='/nlab/show/measurable+locale'>measurable locale</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/measure+space'>measure</a>, <a class='existingWikiWord' href='/nlab/show/measure+space'>measure space</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/von+Neumann+algebra'>von Neumann algebra</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/geometric+measure+theory'>geometric measure theory</a></p>
-</li>
-</ul>
-
-<h2 id='probability_theory'>Probability theory</h2>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/probability+space'>probability space</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/probability+distribution'>probability distribution</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/state'>state</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>in AQFT and operator algebra</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Gelfand-Naimark-Segal+construction'>GNS construction</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Fell%27s+theorem'>Fell&#39;s theorem</a></p>
-</li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/entropy'>entropy</a>, <a class='existingWikiWord' href='/nlab/show/relative+entropy'>relative entropy</a></p>
-</li>
-</ul>
-
-<h2 id='information_geometry'>Information geometry</h2>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/information+geometry'>information geometry</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/information+metric'>information metric</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Wasserstein+metric'>Wasserstein metric</a></p>
-</li>
-</ul>
-
-<h2 id='thermodynamics'>Thermodynamics</h2>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/thermodynamics'>thermodynamics</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/second+law+of+thermodynamics'>second law of thermodynamics</a>, <a class='existingWikiWord' href='/nlab/show/generalized+second+law+of+thermodynamics'>generalized second law</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/ergodic+theory'>ergodic theory</a></p>
-</li>
-</ul>
-
-<h2 id='theorems'>Theorems</h2>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/Riesz+representation+theorem'>Riesz representation theorem</a></li>
-</ul>
-<div>
-<p>
-  <a href='/nlab/edit/measure+theory+-+contents'>Edit this sidebar</a>
-</p>
-</div></div>
 </div>
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#example'>Example</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/perturbation+theory'>perturbation theory</a> in <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a>, the edges in a the <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagram</a> are traditionally thought of as indicating <a class='existingWikiWord' href='/nlab/show/particle'>particle</a> <a class='existingWikiWord' href='/nlab/show/worldvolume'>trajectories</a> of the <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>fields</a> of the given <a class='existingWikiWord' href='/nlab/show/theory+%28physics%29'>theory</a>. However, this interpretation has its limits, not the least because these “particles” need not satisfy their <a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+equation'>equations of motion</a>. To indicate this one speaks of <strong>virtual particles</strong>.</p>
+<p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> a <em>radiative correction</em> is a contribution to the <a class='existingWikiWord' href='/nlab/show/S-matrix'>Feynman perturbation series</a> corresponding to <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagrams</a> that describe exchange of <a class='existingWikiWord' href='/nlab/show/virtual+particle'>virtual</a> quanta of radiation, such as <a class='existingWikiWord' href='/nlab/show/photon'>photons</a> (for <a class='existingWikiWord' href='/nlab/show/electromagnetic+radiation'>electromagnetic radiation</a>).</p>
 
-<h2 id='related_concepts'>Related concepts</h2>
+<h2 id='example'>Example</h2>
 
 <ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/relativistic+particle'>relativistic particle</a>, <a class='existingWikiWord' href='/nlab/show/spinning+particle'>spinning particle</a>, <a class='existingWikiWord' href='/nlab/show/superparticle'>superparticle</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/fundamental+particle'>fundamental particle</a>, <a class='existingWikiWord' href='/nlab/show/antiparticle'>antiparticle</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/radiative+correction'>radiative correction</a></p>
-</li>
+<li>The main contribution to the <em><a class='existingWikiWord' href='/nlab/show/Lamb+shift'>Lamb shift</a></em> (often referred to as <em>the</em> vertex correction) is due to the radiative correction induced by the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> emitting a <a class='existingWikiWord' href='/nlab/show/virtual+particle'>virtual</a> <a class='existingWikiWord' href='/nlab/show/photon'>photon</a>, then interacting with the <a class='existingWikiWord' href='/nlab/show/background+field'>background</a> <a class='existingWikiWord' href='/nlab/show/electromagnetic+field'>electromagnetic field</a>, and and re-absorbing the <a class='existingWikiWord' href='/nlab/show/virtual+particle'>virtual</a> <a class='existingWikiWord' href='/nlab/show/photon'>photon</a>; described by this <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagram</a>:</li>
 </ul>
+
+<p><img src='https://ncatlab.org/nlab/files/LambShiftMainVertexCorrection.png' width='100'/></p>
 
 <h2 id='references'>References</h2>
 
 <ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Arnold+Neumaier'>Arnold Neumaier</a>, <em><a href='https://www.physicsforums.com/insights/physics-virtual-particles/'>The Physics of Virtual Particles</a></em></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Arnold+Neumaier'>Arnold Neumaier</a>, <em><a href='https://www.physicsforums.com/insights/misconceptions-virtual-particles/'>Misconceptions about Virtual Particles</a></em></p>
-</li>
+<li>C. Was, <em>Radiative corrections</em>, 1994 (<a href='https://cds.cern.ch/record/258038/files/P00020602.pdf'>pdf</a>)</li>
 </ul>
 
-<p>See also</p>
+<p>Specifically for <a class='existingWikiWord' href='/nlab/show/Lamb+shift'>Lamb shift</a>-like corrections:</p>
 
 <ul>
-<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Virtual_particle'>Virtual particle</a></em></li>
+<li id='EidesGrotchShelyuto00'>Michael Eides, Howard Grotch, Valery A. Shelyuto, <em>Theory of Light Hydrogenlike Atoms</em>, Phys. Rept. 342:63-261, 2001 (<a href='https://arxiv.org/abs/hep-ph/0002158'>arXiv:hep-ph/0002158</a>)</li>
 </ul>
 
 <p>
@@ -1047,22 +1157,22 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on December 20, 2017 15:18:48 
+  Created on December 20, 2017 15:47:35 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (176.74.57.166)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/virtual+particle" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/virtual+particle/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/virtual+particle" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/virtual+particle" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/radiative+correction" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/virtual+particle" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/radiative+correction" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/virtual+particle" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/radiative+correction" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/virtual+particle" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/radiative+correction" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
