--- a/pages/18853.html
+++ b/pages/18853.html
@@ -1136,7 +1136,7 @@ margin-left: 0em;
 
 <p>This is a “fine structure” effect not seen by the <a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanics</a> of the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a>, but resulting from <a class='existingWikiWord' href='/nlab/show/radiative+correction'>radiative corrections</a> involving <a class='existingWikiWord' href='/nlab/show/photon'>photon</a> emission/abosorption only seen by regarding the electron in <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a>, here in <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>quantum electrodynamics</a>.</p>
 
-<p>The Lamb shift may be attributed to <a class='existingWikiWord' href='/nlab/show/loop+order'>1-loop</a> <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagrams</a> contributions giving “<a class='existingWikiWord' href='/nlab/show/radiative+correction'>radiative corrections</a>” to the basic <a class='existingWikiWord' href='/nlab/show/loop+order'>tree level</a> vertex that describes the basic interaction of the electron with the <a class='existingWikiWord' href='/nlab/show/background+field'>background</a> <a class='existingWikiWord' href='/nlab/show/electromagnetic+field'>electromagnetic field</a>, hence called <em>vertex corrections</em>.</p>
+<p>The Lamb shift may be attributed to <a class='existingWikiWord' href='/nlab/show/loop+order'>1-loop</a> <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagram</a>-contributions giving “<a class='existingWikiWord' href='/nlab/show/radiative+correction'>radiative corrections</a>” to the basic <a class='existingWikiWord' href='/nlab/show/loop+order'>tree level</a> vertex that describes the basic interaction of the electron with the <a class='existingWikiWord' href='/nlab/show/background+field'>background</a> <a class='existingWikiWord' href='/nlab/show/electromagnetic+field'>electromagnetic field</a>, hence called <em>vertex corrections</em>.</p>
 
 <p><img src='https://ncatlab.org/nlab/files/LambShiftVertexCorrections.png' width='500'/></p>
 
@@ -1197,14 +1197,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on December 20, 2017 15:59:50 
+  Revised on December 20, 2017 17:22:32 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (176.74.57.166)
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Lamb+shift" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Lamb+shift/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Lamb+shift" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Lamb+shift" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Lamb+shift" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Lamb+shift/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Lamb+shift" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Lamb+shift" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
