--- a/pages/1788.html
+++ b/pages/1788.html
@@ -318,17 +318,21 @@ margin-left: 0em;
 <p>raw object below.</p>
 &lt;object data='https://golem.ph.utexas.edu/category/files/catenoid.html' height='400' type='text/html' width='600' xmlns='http://www.w3.org/1999/xhtml'&gt;&lt;param name='src' value='/category/files/catenoid.html'/&gt;Your browser will not allow the embedded object!&lt;/object&gt;
 <p>This doesn’t work in nForum or nLab.</p>
+<div class='maruku-equation'><code class='maruku-mathml'>
+ﲧ
+
+</code></div>
 </div>
 
 <div class="revisedby">
-  Revised on December 19, 2017 14:36:57 
-  by <a class="existingWikiWord" href="/nlab/show/Rod+McGuire">Rod Mc Guire</a>
-  (108.39.133.109)
+  Revised on December 21, 2017 03:52:37 
+  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous</a>
+  (72.182.43.120)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1371" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1371 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1372" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1372 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
