--- a/pages/18866.html
+++ b/pages/18866.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      polynomial (∞,1)-functor &gt; history in nLab
+      polynomial (∞,1)-functor in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      polynomial (∞,1)-functor &gt; history
+      polynomial (∞,1)-functor
   </h1>
 
 
@@ -308,26 +308,55 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>&lt; <a class='existingWikiWord' href='/nlab/show/n-excisive+%28%E2%88%9E%2C1%29-functor'>n-excisive (∞,1)-functor</a></p>
+    <blockquote>
+<p>This page is about a <a class='existingWikiWord' href='/nlab/show/vertical+categorification'>categorification</a> of the notion of <a class='existingWikiWord' href='/nlab/show/polynomial+functor'>polynomial functor</a>. For the notion of “polynomial <math class='maruku-mathml' display='inline' id='mathml_4d029b7c683a5b0e4b6289a8e05ff6f311e0043c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-functor” used in <a class='existingWikiWord' href='/nlab/show/Goodwillie+calculus'>Goodwillie calculus</a>, see <a class='existingWikiWord' href='/nlab/show/n-excisive+%28%E2%88%9E%2C1%29-functor'>n-excisive (∞,1)-functor</a>.</p>
+</blockquote>
+
+<h1 id='polynomial_functors'>Polynomial <math class='maruku-mathml' display='inline' id='mathml_4d029b7c683a5b0e4b6289a8e05ff6f311e0043c_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-functors</h1>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_pages'>Related pages</a></li><li><a href='#references'>References</a></li></ul></div>
+<h2 id='idea'>Idea</h2>
+
+<p>A <strong>polynomial <math class='maruku-mathml' display='inline' id='mathml_4d029b7c683a5b0e4b6289a8e05ff6f311e0043c_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-functor</strong> is a <a class='existingWikiWord' href='/nlab/show/vertical+categorification'>categorification</a> of the notion of <a class='existingWikiWord' href='/nlab/show/polynomial+functor'>polynomial functor</a>.</p>
+
+<h2 id='related_pages'>Related pages</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-operad'>(∞,1)-operad</a></li>
+</ul>
+
+<h2 id='references'>References</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/David+Gepner'>David Gepner</a>, <a class='existingWikiWord' href='/nlab/show/Rune+Haugseng'>Rune Haugseng</a>, <a class='existingWikiWord' href='/nlab/show/Joachim+Kock'>Joachim Kock</a>, <em>∞-Operads as Analytic Monads</em>, (<a href='https://arxiv.org/abs/1712.06469'>arXiv:1712.06469</a>)</li>
+</ul>
+
+<p>
+ 
+ 
+ 
+ 
+ 
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on December 21, 2017 05:19:51 
+  Created on December 21, 2017 05:24:36 
   by <a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>
   (76.167.222.204)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/polynomial+%28%E2%88%9E%2C1%29-functor+%3E+history" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/polynomial+%28%E2%88%9E%2C1%29-functor+%3E+history/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/polynomial+%28%E2%88%9E%2C1%29-functor+%3E+history" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/polynomial+%28%E2%88%9E%2C1%29-functor+%3E+history" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/polynomial+%28%E2%88%9E%2C1%29-functor" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/polynomial+%28%E2%88%9E%2C1%29-functor+%3E+history" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/polynomial+%28%E2%88%9E%2C1%29-functor" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/polynomial+%28%E2%88%9E%2C1%29-functor+%3E+history" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/polynomial+%28%E2%88%9E%2C1%29-functor" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/polynomial+%28%E2%88%9E%2C1%29-functor+%3E+history" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/polynomial+%28%E2%88%9E%2C1%29-functor" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
