--- a/pages/18853.html
+++ b/pages/18853.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1142,7 +1142,7 @@ margin-left: 0em;
 
 <p>(Here the dot on the right is the external vertex for the <a class='existingWikiWord' href='/nlab/show/background+field'>background</a> <a class='existingWikiWord' href='/nlab/show/electromagnetic+field'>electromagnetic field</a>.)</p>
 
-<p>The main contribution (often referred to as <em>the</em> vertex correction) is due to the <a class='existingWikiWord' href='/nlab/show/radiative+correction'>radiative correction</a> induced by the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> emitting a <a class='existingWikiWord' href='/nlab/show/virtual+particle'>virtual</a> <a class='existingWikiWord' href='/nlab/show/photon'>photon</a>, then interacting with the <a class='existingWikiWord' href='/nlab/show/background+field'>background</a> <a class='existingWikiWord' href='/nlab/show/electromagnetic+field'>electromagnetic field</a>, and and re-absorbing the <a class='existingWikiWord' href='/nlab/show/virtual+particle'>virtual</a> <a class='existingWikiWord' href='/nlab/show/photon'>photon</a>; described by this <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagram</a>:</p>
+<p>The main contribution (often referred to as <em>the</em> vertex correction) is due to the <a class='existingWikiWord' href='/nlab/show/radiative+correction'>radiative correction</a> induced by the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> emitting a <a class='existingWikiWord' href='/nlab/show/virtual+particle'>virtual</a> <a class='existingWikiWord' href='/nlab/show/photon'>photon</a>, then interacting with the <a class='existingWikiWord' href='/nlab/show/background+field'>background</a> <a class='existingWikiWord' href='/nlab/show/electromagnetic+field'>electromagnetic field</a>, and and finally re-absorbing the <a class='existingWikiWord' href='/nlab/show/virtual+particle'>virtual</a> <a class='existingWikiWord' href='/nlab/show/photon'>photon</a>; described by this <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagram</a>:</p>
 
 <p><img src='https://ncatlab.org/nlab/files/LambShiftMainVertexCorrection.png' width='100'/></p>
 
@@ -1197,14 +1197,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on December 21, 2017 04:20:51 
+  Revised on December 21, 2017 05:49:15 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.53.179)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Lamb+shift" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Lamb+shift/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Lamb+shift" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Lamb+shift" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Lamb+shift" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Lamb+shift/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Lamb+shift" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Lamb+shift" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
