--- a/pages/18865.html
+++ b/pages/18865.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      polynomial (∞,1)-functor &gt; history in nLab
+      stable homotopy hypothesis in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      polynomial (∞,1)-functor &gt; history
+      stable homotopy hypothesis
   </h1>
 
 
@@ -308,26 +308,42 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>&lt; <a class='existingWikiWord' href='/nlab/show/n-excisive+%28%E2%88%9E%2C1%29-functor'>n-excisive (∞,1)-functor</a></p>
+    <h1 id='stable_homotopy_hypothesis'>Stable homotopy hypothesis</h1>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a></li></ul></div>
+<h2 id='idea'>Idea</h2>
+
+<p>While the ordinary <a class='existingWikiWord' href='/nlab/show/homotopy+hypothesis'>homotopy hypothesis</a> relates <a class='existingWikiWord' href='/nlab/show/infinity-groupoid'>∞-groupoids</a> to <a class='existingWikiWord' href='/nlab/show/topological+space'>topological spaces</a>, the <strong>stable homotopy hypothesis</strong> relates symmetric monoidal <math class='maruku-mathml' display='inline' id='mathml_bf25d0f5288ce29c83abb7d47557a20523a7a709_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-groupoids to <a class='existingWikiWord' href='/nlab/show/spectrum'>spectra</a>.</p>
+
+<h2 id='references'>References</h2>
+
+<ul>
+<li id='JO12'>
+<p><a class='existingWikiWord' href='/nlab/show/Niles+Johnson'>Niles Johnson</a> and <span class='newWikiWord'>Angelica Osorno<a href='/nlab/new/Angelica+Osorno'>?</a></span>, <em>Modeling stable one-types</em>, <a href='http://tac.mta.ca/tac/volumes/26/20/26-20abs.html'>tac</a></p>
+</li>
+
+<li id='GJO17'>
+<p><a class='existingWikiWord' href='/nlab/show/Nick+Gurski'>Nick Gurski</a>, <a class='existingWikiWord' href='/nlab/show/Niles+Johnson'>Niles Johnson</a>, and <span class='newWikiWord'>Angelica Osorno<a href='/nlab/new/Angelica+Osorno'>?</a></span>, <em>The 2-dimensional stable homotopy hypothesis</em>, <a href='https://arxiv.org/abs/1712.07218'>arxiv</a></p>
+</li>
+</ul>
 </div>
 
 <div class="revisedby">
-  Revised on December 21, 2017 05:19:51 
+  Created on December 21, 2017 05:12:47 
   by <a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>
   (76.167.222.204)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/polynomial+%28%E2%88%9E%2C1%29-functor+%3E+history" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/polynomial+%28%E2%88%9E%2C1%29-functor+%3E+history/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/polynomial+%28%E2%88%9E%2C1%29-functor+%3E+history" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/polynomial+%28%E2%88%9E%2C1%29-functor+%3E+history" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/stable+homotopy+hypothesis" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/polynomial+%28%E2%88%9E%2C1%29-functor+%3E+history" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/stable+homotopy+hypothesis" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/polynomial+%28%E2%88%9E%2C1%29-functor+%3E+history" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/stable+homotopy+hypothesis" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/polynomial+%28%E2%88%9E%2C1%29-functor+%3E+history" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/stable+homotopy+hypothesis" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
