--- a/pages/18869.html
+++ b/pages/18869.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Hélène Esnault in nLab
+      Klaus Hepp in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Hélène Esnault
+      Klaus Hepp
   </h1>
 
 
@@ -309,58 +309,41 @@ margin-left: 0em;
 
 <div id="revision">
     <ul>
-<li><a href='http://www.mi.fu-berlin.de/users/esnault/'>Website</a></li>
-
-<li><a href='http://en.wikipedia.org/wiki/H%C3%A9l%C3%A8ne_Esnault'>Wikipedia</a></li>
-
-<li><a href='http://www.genealogy.math.ndsu.nodak.edu/id.php?id=68523'>Mathematical genealogy</a></li>
-
-<li><a href='http://www.mi.fu-berlin.de/users/esnault/helene_publ.html'>publication list</a></li>
+<li><a href='https://en.wikipedia.org/wiki/Klaus_Hepp'>Wikipedia entry</a></li>
 </ul>
 
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_e8a42e5238d6bb64baec85d8f91973a231f58dab_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_2aa034412b9f0d5f6706ebfc7fb5f3f9a84a3c8e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Deligne+cohomology'>Deligne cohomology</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/higher+regulator'>Beilinson regulator</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/function+field+analogy'>function field analogy</a></p>
-</li>
-
-<li>
 <p><a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Wick%27s+lemma'>Wick&#39;s lemma</a></p>
 </li>
 </ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
-
-<p>
-</p>
 </div>
 
 <div class="revisedby">
-  Revised on December 21, 2017 10:50:19 
+  Created on December 21, 2017 10:47:40 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.53.179)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/H%C3%A9l%C3%A8ne+Esnault" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/H%C3%A9l%C3%A8ne+Esnault/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/H%C3%A9l%C3%A8ne+Esnault" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/H%C3%A9l%C3%A8ne+Esnault" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Klaus+Hepp" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/H%C3%A9l%C3%A8ne+Esnault" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Klaus+Hepp" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/H%C3%A9l%C3%A8ne+Esnault" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Klaus+Hepp" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/H%C3%A9l%C3%A8ne+Esnault" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Klaus+Hepp" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
