--- a/pages/9227.html
+++ b/pages/9227.html
@@ -355,7 +355,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/state+on+an+operator+algebra'>in AQFT and operator algebra</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>in AQFT and operator algebra</a></p>
 </li>
 
 <li>
@@ -1033,8 +1033,8 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/Gian-Carlo+Wick'>Gian-Carlo Wick</a>, <em>The evaluation of the collision matrix</em>, Phys. Rev. 80, 268-272 (1950)</p>
 </li>
 
-<li>
-<p>K. Hepp, <em>Théorie de la Renormalisation</em> Lect. Notes in Physics, Springer 1969</p>
+<li id='Hepp69'>
+<p><a class='existingWikiWord' href='/nlab/show/Klaus+Hepp'>Klaus Hepp</a>, <em>Théorie de la Renormalisation</em> Lect. Notes in Physics, Springer 1969</p>
 </li>
 
 <li id='BrunettiFredenhagenVerch03'>
@@ -1061,14 +1061,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on August  3, 2017 10:04:23 
+  Revised on December 21, 2017 10:46:49 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.75.2)
+  (94.220.53.179)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Wick%27s+lemma" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Wick%27s+lemma/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Wick%27s+lemma" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Wick%27s+lemma" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Wick%27s+lemma" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Wick%27s+lemma/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/Wick%27s+lemma" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Wick%27s+lemma" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
