--- a/pages/1788.html
+++ b/pages/1788.html
@@ -308,27 +308,18 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>can nLab/nForum use <code>&lt;object&gt;</code> with html data? See <a href='https://golem.ph.utexas.edu/category/2017/12/sagemath_and_3d_models_in_webp.html'>nCafe: /sagemath_and_3d_models_in_webp.htm</a> which includes <a href='https://golem.ph.utexas.edu/category/files/catenoid.html'>https://golem.ph.utexas.edu/category/files/catenoid.html</a>.</p>
-
-<p><code>&lt;object xmlns=&quot;http://www.w3.org/1999/xhtml&quot; type=&quot;text/html&quot; data=&quot;https://golem.ph.utexas.edu/category/files/catenoid.html&quot; width=&quot;600&quot; height=&quot;400&quot;&gt;
-      &lt;param name=&quot;src&quot; value=&quot;/category/files/catenoid.html&quot; /&gt;
-      Your browser will not allow the embedded object!
-    &lt;/object&gt;</code></p>
-
-<p>raw object below.</p>
-&lt;object data='https://golem.ph.utexas.edu/category/files/catenoid.html' height='400' type='text/html' width='600' xmlns='http://www.w3.org/1999/xhtml'&gt;&lt;param name='src' value='/category/files/catenoid.html'/&gt;Your browser will not allow the embedded object!&lt;/object&gt;
-<p>This doesn’t work in nForum or nLab.</p>
+    <p>….</p>
 </div>
 
 <div class="revisedby">
-  Revised on December 22, 2017 01:34:23 
-  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous</a>
-  (72.182.43.120)
+  Revised on December 22, 2017 06:46:50 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1374" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1374 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1375" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1375 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
