--- a/pages/6325.html
+++ b/pages/6325.html
@@ -319,9 +319,37 @@ margin-left: 0em;
 
 <h2 id='concepts'>Concepts</h2>
 
+<p><strong><a class='existingWikiWord' href='/nlab/show/field+theory'>field theory</a></strong>: <a class='existingWikiWord' href='/nlab/show/classical+field+theory'>classical</a>, <a class='existingWikiWord' href='/nlab/show/prequantum+field+theory'>pre-quantum</a>, <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum</a>, <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum</a></p>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theory</a></strong></p>
+
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanical system</a>, <a class='existingWikiWord' href='/nlab/show/subsystem'>subsystem</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/field+bundle'>field bundle</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian density</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+form'>Euler-Lagrange form</a>, <a class='existingWikiWord' href='/nlab/show/pre-symplectic+current'>presymplectic current</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/locally+variational+field+theory'>locally variational field theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/phase+space'>covariant phase space</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanical system</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/subsystem'>subsystem</a></p>
 </li>
 
 <li>
@@ -359,7 +387,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/state+on+an+operator+algebra'>quantum states</a>,</p>
+<p><a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>quantum states</a>,</p>
 
 <ul>
 <li>
@@ -1099,12 +1127,35 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>The <em>Stone–von Neumann theorem</em> (due to <a class='existingWikiWord' href='/nlab/show/Marshall+Stone'>Marshall Stone</a> and <a class='existingWikiWord' href='/nlab/show/John+von+Neumann'>John von Neumann</a>) says that there is – up to <a class='existingWikiWord' href='/nlab/show/isomorphism'>isomorphism</a> – a unique <a class='existingWikiWord' href='/nlab/show/irreducible+representation'>irreducible</a> <a class='existingWikiWord' href='/nlab/show/unitary+representation'>unitary representation</a> of the <a class='existingWikiWord' href='/nlab/show/Heisenberg+group'>Heisenberg group</a> on finitely many generators (equivalently: of the <a class='existingWikiWord' href='/nlab/show/associative+unital+algebra'>algebra</a> of <a class='existingWikiWord' href='/nlab/show/canonical+commutation+relation'>canonical commutation relations</a>).</p>
 
-<p>The analogous statement does <em>not</em> hold for infinitely many generators. See also <a class='existingWikiWord' href='/nlab/show/Haag%27s+theorem'>Haag&#39;s theorem</a>.</p>
+<p>The analogous statement does <em>not</em> hold for infinitely many generators (as they appear in <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a>); this is <em><a class='existingWikiWord' href='/nlab/show/Haag%27s+theorem'>Haag&#39;s theorem</a></em>.</p>
+
+<p>Explicitly, the <a class='existingWikiWord' href='/nlab/show/canonical+commutation+relation'>canonical commutation relations</a> on two generators (<a class='existingWikiWord' href='/nlab/show/polarization'>canonical coordinate</a> <math class='maruku-mathml' display='inline' id='mathml_c5e2a743e55d6c822b400729fddd8141e2ae0359_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>q</mi></mrow><annotation encoding='application/x-tex'>q</annotation></semantics></math> and <a class='existingWikiWord' href='/nlab/show/canonical+momentum'>canonical momentum</a> <math class='maruku-mathml' display='inline' id='mathml_c5e2a743e55d6c822b400729fddd8141e2ae0359_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi></mrow><annotation encoding='application/x-tex'>p</annotation></semantics></math>) in the form</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_c5e2a743e55d6c822b400729fddd8141e2ae0359_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mi>q</mi><mo>,</mo><mi>p</mi><mo stretchy='false'>]</mo><mo>=</mo><mi>i</mi><mi>ℏ</mi></mrow><annotation encoding='application/x-tex'>
+  [q,p] = i \hbar
+
+</annotation></semantics></math></div>
+<p>may be represented as <a class='existingWikiWord' href='/nlab/show/unbounded+operator'>unbounded operators</a> on the <a class='existingWikiWord' href='/nlab/show/Hilbert+space'>Hilbert space</a> of <a class='existingWikiWord' href='/nlab/show/square+integrable+function'>square integrable functions</a> <math class='maruku-mathml' display='inline' id='mathml_c5e2a743e55d6c822b400729fddd8141e2ae0359_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>L</mi> <mn>2</mn></msup><mo stretchy='false'>(</mo><mi>ℝ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>L^2(\mathbb{R})</annotation></semantics></math> on the <a class='existingWikiWord' href='/nlab/show/real+number'>real line</a> by defining them on the <a class='existingWikiWord' href='/nlab/show/dense+subspace'>dense subspace</a> of <a class='existingWikiWord' href='/nlab/show/smooth+map'>smooth functions</a> <math class='maruku-mathml' display='inline' id='mathml_c5e2a743e55d6c822b400729fddd8141e2ae0359_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ψ</mi><mo lspace='verythinmathspace'>:</mo><mi>ℝ</mi><mo>→</mo><mi>ℂ</mi></mrow><annotation encoding='application/x-tex'>\psi \colon \mathbb{R} \to \mathbb{C}</annotation></semantics></math> as</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_c5e2a743e55d6c822b400729fddd8141e2ae0359_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>q</mi><mi>ψ</mi><mo stretchy='false'>)</mo><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mo>≔</mo><mi>x</mi><mi>ψ</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mphantom><mi>AAAA</mi></mphantom><mo stretchy='false'>(</mo><mi>p</mi><mi>ψ</mi><mo stretchy='false'>)</mo><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mo>≔</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mi>i</mi><mi>ℏ</mi><mfrac><mo>∂</mo><mrow><mo>∂</mo><mi>x</mi></mrow></mfrac><mi>ψ</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
+  (q \psi)(x) \coloneqq x \psi(x)
+  \phantom{AAAA}
+  (p \psi)(x) \coloneqq -i \hbar \frac{\partial}{\partial x} \psi(x)
+  \,,
+
+</annotation></semantics></math></div>
+<p>where on the right we have the <a class='existingWikiWord' href='/nlab/show/derivative'>derivative</a> along the canonical <a class='existingWikiWord' href='/nlab/show/coordinate+system'>coordinate function</a> on <math class='maruku-mathml' display='inline' id='mathml_c5e2a743e55d6c822b400729fddd8141e2ae0359_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{R}</annotation></semantics></math>.</p>
+
+<p>This is often called the <em>Schrödinger representation</em> (after <a class='existingWikiWord' href='/nlab/show/Erwin+Schr%C3%B6dinger'>Erwin Schrödinger</a>, e.g. <a href='#Redei'>Redei</a>), to be distinguished from “<a class='existingWikiWord' href='/nlab/show/picture+of+mechanics'>Schrödinger picture</a>” which is a related but different concept.</p>
+
+<h2 id='related_concepts'>Related concepts</h2>
+
+<ul>
+<li>for the Schrödinger representation obtained via <a class='existingWikiWord' href='/nlab/show/geometric+quantization'>geometric quantization</a> see <a href='geometric+quantization#ExamplesSchroedingerRepresentation'>there</a></li>
+</ul>
 
 <h2 id='references'>References</h2>
 
@@ -1124,22 +1175,42 @@ margin-left: 0em;
 </li>
 </ul>
 
+<p>Review includes</p>
+
+<ul>
+<li id='Redei'><a class='existingWikiWord' href='/nlab/show/Mikl%C3%B3s+R%C3%A9dei'>Miklós Rédei</a>, <em>Von Neumann’s proof of Uniqueness of Schrödinger representation of Heisenberg’s commutation relation</em> (<a class='existingWikiWord' href='/nlab/files/RedeiCCRRepUniqueness.pdf' title='pdf'>pdf</a>)</li>
+</ul>
+
+<p>See also</p>
+
+<ul>
+<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Stone%E2%80%93von_Neumann_theorem'>Stone-von Neumann theorem</a></em></li>
+</ul>
+
 <p>
  
  
  
 </p>
+
+<p>
+ 
+</p>
+
+<p>
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on November 17, 2015 11:18:14 
+  Revised on December 22, 2017 07:26:34 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (86.187.40.220)
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Stone-von+Neumann+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Stone-von+Neumann+theorem/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Stone-von+Neumann+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Stone-von+Neumann+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Stone-von+Neumann+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Stone-von+Neumann+theorem/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Stone-von+Neumann+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Stone-von+Neumann+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
