--- a/pages/18876.html
+++ b/pages/18876.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Sandbox in nLab
+      Harry Lehmann in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Sandbox
+      Harry Lehmann
   </h1>
 
 
@@ -308,35 +308,42 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_c2383b0932eb34e8cda030b1cc1ab2886f5f3158_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>⟨</mo><mi>v</mi><mo>⋅</mo><mi>w</mi><mo>,</mo><mi>v</mi><mo>⋅</mo><mi>w</mi><mo stretchy='false'>⟩</mo><mo>=</mo><mo stretchy='false'>⟨</mo><mi>v</mi><mo>,</mo><mi>v</mi><mo stretchy='false'>⟩</mo><mo stretchy='false'>⟨</mo><mi>w</mi><mo>,</mo><mi>w</mi><mo stretchy='false'>⟩</mo><mo>+</mo><mo stretchy='false'>⟨</mo><mi>v</mi><mo>,</mo><mi>w</mi><mo stretchy='false'>⟩</mo><mo stretchy='false'>⟨</mo><mi>w</mi><mo>,</mo><mi>v</mi><mo stretchy='false'>⟩</mo><mo>=</mo><mo stretchy='false'>⟨</mo><mi>v</mi><mo>+</mo><mi>w</mi><mo>,</mo><mi>v</mi><mo>+</mo><mi>w</mi><mo stretchy='false'>⟩</mo></mrow><annotation encoding='application/x-tex'>
-  \langle v \cdot w, v \cdot w \rangle
-  =
-  \langle v,v\rangle \langle w,w\rangle
-  +
-  \langle v,w\rangle \langle w,v\rangle
-  = 
-  \langle v + w, v + w\rangle
+    <ul>
+<li><a href='https://en.wikipedia.org/wiki/Harry_Lehmann'>Wikipedia entry</a></li>
+</ul>
 
-</annotation></semantics></math></div>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_79629190f12f5a91503dc03f6350591391181c4d_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/LSZ+reduction+formula'>LSZ reduction formula</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/retarded+product'>retarded product</a></p>
+</li>
+</ul>
+
+<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on December 22, 2017 16:30:42 
+  Created on December 22, 2017 16:58:20 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (185.46.137.5)
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1376" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1376 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Harry+Lehmann" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/Sandbox" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Harry+Lehmann" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/Sandbox" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Harry+Lehmann" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Sandbox" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Harry+Lehmann" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
